# fedctl

./: .gitignore  CLAUDE.md  fedctl-admin.hcl  fedctl_cli_spec.md  fedctl_cli_spec_single.md  fedctl_implementation_plan.md  fedctl_implementation_plan_single.md  fedctl_nomad_api_mvp.md  fedctl_nomad_api_mvp_single.md  fedctl_repo_skeleton_python.md  fedctl_repo_skeleton_python_single.md  fedctl_submit_spec.md  migration_plan_hardware.md  nomad_flower_example_flow.md  pyproject.toml  submit_service_plan.md
apps/fedctl_research/: README.md  pyproject.toml
apps/fedctl_research/deploy_configs/: README.md
apps/fedctl_research/deploy_configs/compute_heterogeneity/ablations/fixed_pair_interpolation/: none.yaml
apps/fedctl_research/deploy_configs/compute_heterogeneity/ablations/slow_minority/: mixed.yaml  rpi5_only.yaml
apps/fedctl_research/deploy_configs/network_heterogeneity/ablations/deployment_stressors/: asym_up.yaml  med.yaml  mild.yaml
apps/fedctl_research/deploy_configs/network_heterogeneity/ablations/network_stressor_sweep/: asym_down.yaml
apps/fedctl_research/deploy_configs/network_heterogeneity/main/all_rpi5/: med.yaml  none.yaml
apps/fedctl_research/deploy_configs/network_heterogeneity/main/mixed/: mild.yaml
apps/fedctl_research/experiment_configs/compute_heterogeneity/main/cifar10_cnn/: fedavg.toml  fedrolex.toml  fiarse.toml  heterofl.toml
apps/fedctl_research/experiment_configs/compute_heterogeneity/main/fashion_mnist_cnn/: fedavg.toml  fedrolex.toml  fiarse.toml  heterofl.toml
apps/fedctl_research/experiment_configs/network_heterogeneity/main/cifar10_cnn/: fedavg.toml  fedavgm.toml  fedbuff.toml  fedstaleweight.toml
apps/fedctl_research/experiment_configs/network_heterogeneity/main/fashion_mnist_cnn/: fedavg.toml  fedavgm.toml  fedbuff.toml  fedstaleweight.toml
apps/fedctl_research/experiment_configs/smoke/compute_heterogeneity/fashion_mnist_mlp/: fedavg.toml  fedrolex.toml  fiarse.toml  heterofl.toml
apps/fedctl_research/experiment_configs/smoke/network_heterogeneity/fashion_mnist_mlp/: fedavg.toml  fedavgm.toml  fedbuff_k1.toml  fedbuff_k10.toml
apps/fedctl_research/experiment_configs/templates/: README.md
apps/fedctl_research/repo_configs/: README.md
apps/fedctl_research/repo_configs/compute_heterogeneity/ablations/fixed_pair_interpolation/: none.yaml
apps/fedctl_research/repo_configs/compute_heterogeneity/ablations/slow_minority/: mixed.yaml  rpi5_only.yaml
apps/fedctl_research/repo_configs/compute_heterogeneity/main/: none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/ablations/deployment_stressors/: asym_down.yaml  asym_up.yaml  med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/ablations/device_correlated_non_iid/: none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/ablations/network_stressor_sweep/: asym_down.yaml  asym_up.yaml  med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/main/: none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/main/all_rpi5/: med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/main/high_concurrency/: med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/main/low_concurrency/: med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/network_heterogeneity/main/mixed/: med.yaml  mild.yaml  none.yaml
apps/fedctl_research/repo_configs/smoke/: compute_heterogeneity.yaml
apps/fedctl_research/run_configs/compute_heterogeneity/main/fashion_mnist_cnn/: fedavg.toml  fedrolex.toml  fiarse.toml  heterofl.toml
apps/fedctl_research/run_configs/network_heterogeneity/main/fashion_mnist_cnn/: fedavg.toml  fedavgm.toml  fedbuff.toml  fedstaleweight.toml
apps/fedctl_research/run_configs/smoke/compute_heterogeneity/fashion_mnist_mlp/: fedavg.toml  fedrolex.toml  fiarse.toml  heterofl.toml
apps/fedctl_research/run_configs/smoke/network_heterogeneity/fashion_mnist_mlp/: fedavg.toml  fedavgm.toml  (+2 more)
apps/fedctl_research/run_configs/templates/: README.md
apps/fedctl_research/src/fedctl_research/: __init__.py  config.py  costs.py  metrics.py  netem_probe.py  result_artifacts.py  seeding.py  wandb_logging.py
apps/fedctl_research/src/fedctl_research/app/: __init__.py  client_app.py  server_app.py
apps/fedctl_research/src/fedctl_research/methods/: __init__.py  assignment.py  base.py  registry.py  runtime.py
apps/fedctl_research/src/fedctl_research/partitioning/: __init__.py  balanced_label_skew_partitioner.py  base.py  classification_partitioner.py  continuous_partitioner.py  device_correlated_label_skew_partitioner.py  dirichlet_partitioner.py  iid_partitioner.py  partition_request.py
apps/fedctl_research/src/fedctl_research/runtime/: __init__.py  classification.py  regression.py
apps/fedctl_research/src/fedctl_research/tasks/: __init__.py  base.py  layers.py  registry.py
refs/heterofl_fedctl/: README.md  pyproject.toml
refs/heterofl_fedctl/heterofl_fedctl/: __init__.py  client_app.py  config.py  server_app.py  slicing.py  strategy.py  task.py
refs/msgbench-tabular/: README.md  pyproject.toml
refs/msgbench-tabular/msgbench/: __init__.py  client_app.py  server_app.py
(+965 files in other folders)
