[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heterofl-fedctl"
version = "0.1.0"
description = "Fixed-rate HeteroFL prototype for fedctl on modern Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "heterofl_fedctl.server_app:app"
clientapp = "heterofl_fedctl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-train = 1.0
fraction-evaluate = 0.5
min-available-nodes = 4
min-train-nodes = 4
min-evaluate-nodes = 2
local-epochs = 1
learning-rate = 0.05
batch-size = 32
dataset-name = "fashion-mnist"
partitioning = "iid"
global-model-rate = 1.0
default-model-rate = 1.0
rpi4-model-rate = 0.5
rpi5-model-rate = 1.0
capability-discovery-timeout-s = 120.0
heterofl-node-device-types = ""
heterofl-node-rates = ""



#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 4

# [tool.flwr.federations.remote-deployment]
# address = "127.0.0.1:9093"
# insecure = true
